<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="format_invalid">Formato inválido para números</string>
    <string name="complete_required_field">Favor, preencher campos necessários!</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="km_liter">KMs por litro</string>
    <string name="total_expense">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="calculate">CALCULAR</string>
</resources>